# spine

./: .gitignore  README.md  setup.md
bash_scripts/: submit_eval_rad_field_example.bash  submit_train_rad_field_example.bash
slurm_scripts/: eval_rad_field_example.sh  train_rad_field_example.sh
spine_gsplat/spine/: spine.py  spine_config.py  spine_pipeline.py  spine_utils.py  viewer_utils.py
spine_gsplat/spine/clip/: clip.py  model.py
spine_gsplat/spine/data/: spine_datamanager.py
spine_gsplat/spine/encoders/: clip_encoder.py  (+2 more)
spine_nerf/: pyproject.toml
spine_nerf/spine/: spine.py  spine_config.py  spine_field.py  spine_fieldheadnames.py  spine_pipeline.py  spine_renderers.py
spine_nerf/spine/clip/: model.py
spine_nerf/spine/data/: spine_datamanager.py
spine_nerf/spine/data/utils/: clip_dataloader.py  dino_dataloader.py  feature_dataloader.py  utils.py  vggt_dataloader.py
spine_nerf/spine/encoders/: dino_encoder.py  vggt_encoder.py
spine_nerf/spine/encoders/models/: clip.py  dino.py  vggt.py
spine_nerf/spine/scripts/: main.py
spine_nerf/spine/scripts/configs/evaluators/spine/: spine_eval.yaml
spine_nerf/spine/scripts/configs/evaluators/spine_cfg/: spine_eval_cfg.yaml
spine_nerf/spine/scripts/configs/semantic_encoders/dino_v3/: dino_v3.yaml
spine_nerf/spine/scripts/configs/semantic_encoders/vggt/: vggt.yaml
spine_nerf/spine/scripts/evaluator/: base_eval.py  spine_eval.py
spine_nerf/spine/scripts/rad_field_paths/: rad_field_cfg_paths_example.json
spine_nerf/spine/scripts/utils/: inversion_utils.py  pca_utils.py  radiance_field_utils.py
(+13 files in other folders)
